Prevent page jumping when navigation open and scrollbar

--- a/src/modules/shared/components/header/navigation.module.scss
+++ b/src/modules/shared/components/header/navigation.module.scss
@@ -109,7 +109,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: $colour-background;
   color: white;
   margin: 0;
